# Aris

./: .gitignore  CMakeLists.txt  start_all.sh
demo/demo_Aris_Control/demo_Control/: main.cpp
demo/demo_Aris_Core/demo_Core/: main.cpp
rbt_configs/: RobotCopley.xml  RobotEDU2.xml  RobotEdu.xml  RobotElmo.xml  RobotFaulhaber.xml  RobotRuicongWithCopley.xml  RobotRuicongWithCopleywithIMU.xml
src/: aris.h
src/aris_control/: MadgwickAHRS.cpp  MadgwickAHRS.h  PDOIndexDefinition.h  aris_control.h  aris_control_ethercat.cpp  aris_control_ethercat.h  aris_control_motion.cpp  aris_control_motion.h  aris_control_pipe.cpp  aris_control_pipe.h  io_mapping_definition.h
src/aris_core/: aris_core.h  aris_core_expression_calculator.cpp  aris_core_msg.cpp  aris_core_msg.h  aris_core_msg_loop.cpp  aris_core_msg_loop.h  aris_core_socket.cpp  aris_core_socket.h  aris_core_xml.cpp  aris_core_xml.h  tinyxml2.cpp  tinyxml2.h
src/aris_model/: aris_model.cpp  aris_model.h
src/aris_server/: .aris_server.cpp.swp  aris_node.cpp  aris_node.h  aris_robot_function.cpp  aris_robot_function.h  aris_server.cpp  aris_server.h
